# Arduino-for-ROS2

./: README.md
arduino_com/: CMakeLists.txt  README.md  package.xml
arduino_com/include/arduino_com/: serial_interface.hpp
arduino_com/src/: serial_interface.cpp
test_node/: CMakeLists.txt  package.xml
test_node/scripts/test_script/: test_script.ino
test_node/src/: test_node.cpp
